# azure-airline-operations-intelligence-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: quality.yml
configs/: azure_mapping.yaml  dashboard_outputs.yaml  dashboard_outputs_ci.yaml  data_generation.yaml  data_generation_ci.yaml  delay_prediction.yaml  delay_prediction_ci.yaml  disruption_scoring.yaml  disruption_scoring_ci.yaml  genai_assistant.yaml  genai_assistant_ci.yaml  maintenance_analytics.yaml  maintenance_analytics_ci.yaml  monitoring.yaml  monitoring_ci.yaml  passenger_forecasting.yaml  passenger_forecasting_ci.yaml  platform.yaml  validation.yaml  validation_ci.yaml
diagrams/: azure-data-zones.mmd  azure-mlops-genai-monitoring.mmd  azure-security-governance.mmd  azure-target-architecture.mmd  dashboard-output-flow.mmd  disruption-scoring-flow.mmd  final-azure-target-flow.mmd  final-evidence-lineage.mmd  final-platform-flow.mmd  genai-operations-assistant-flow.mmd  maintenance-analytics-flow.mmd  monitoring-observability-flow.mmd  target-architecture.mmd
docs/architecture/: azure-deployment-architecture.md  dashboard-output-architecture.md  data-architecture.md  delay-prediction-architecture.md  disruption-scoring-architecture.md  domain-boundaries.md  final-platform-architecture.md  genai-architecture.md  genai-operations-assistant-architecture.md  ingestion-validation-architecture.md  ml-architecture.md  (+6 more)
infra/: README.md
scripts/: validate_azure_architecture.py  validate_portfolio_readiness.py
(+244 files in other folders)
